--- a/components/common/tabs/tabs.wxss
+++ b/components/common/tabs/tabs.wxss
@@ -14,6 +14,7 @@
 }
 .tab-item{
     text-align: center;
+    color: #444;
     height: 100%;
     line-height: 100rpx;
 }
@@ -29,8 +30,6 @@
 }
 .tab-slider .tab-slider-inner{
     display: inline-block;
-    width: 70%;
     height: 100%;
-    background: #f00; 
     border-radius: 10rpx;
 }
