--- a/components/common/wf-loading/wf-loading.wxss
+++ b/components/common/wf-loading/wf-loading.wxss
@@ -9,6 +9,7 @@
 }
 
 .wf-loading-content{
+    position: relative;
     width: 100%;
     height: 100%;
 }
@@ -16,12 +17,18 @@
 .wf-loading-spinner{
     display: flex;
     align-items: center;
-    justify-content: space-evenly;
 }
 .spinner-item{
     flex: 0 0 auto;
-    width: 16rpx;
-    height: 16rpx;
+    width: 15rpx;
+    height: 15rpx;
+    margin: 0 10rpx;
     background: #888;
     border-radius: 50%;
+}
+
+.spinner-item-active{
+    position: absolute;
+    z-index: 2;
+    background: #000;
 }
