dropdown-menu 下拉菜单组件

--- a/components/common/number-keyboard/number-keyboard.wxss
+++ b/components/common/number-keyboard/number-keyboard.wxss
@@ -1,6 +1,6 @@
 /* components/common/number-keyboard/number-keyboard.wxss */
 .number-keyboard{
-    position: fixed;
+    position: relative;
     z-index: 100;
     display: flex;
     justify-content: space-between;
