dropdown-menu-group

--- a/components/common/dropdown-menu-group/dropdown-menu-group.wxml
+++ b/components/common/dropdown-menu-group/dropdown-menu-group.wxml
@@ -1,2 +1,9 @@
 <!--components/common/dropdown-menu-group/dropdown-menu-group.wxml-->
-<text>components/common/dropdown-menu-group/dropdown-menu-group.wxml</text>
+<view class="dropdown-menu-group">
+
+        <slot></slot>
+
+
+</view>
+
+
