--- a/components/common/wf-picker/wf-picker.wxss
+++ b/components/common/wf-picker/wf-picker.wxss
@@ -1,7 +1,15 @@
 /* components/common/wf-picker/wf-picker.wxss *//* components/common/wf-picker-view-column/wf-picker-view-column.wxss */
 .wf-picker{
     position: fixed;
+    z-index: 6;
     bottom: 0;
+    left: 0;
+    right: 0;
+    
+}
+.wf-picker-wraper{
+    position: relative;
+    z-index: 3;
     width: 100%;
     height: 540rpx;
     padding: 20rpx 0;
@@ -11,6 +19,15 @@
 }
 .wf-picker .column{
     flex: 1 1 auto;
+}
+.wf-mask{
+    position: fixed;
+    z-index: 1;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    background: rgba(0, 0, 0, .7);
 }
 .picker-mask{
     position: absolute;
@@ -29,7 +46,7 @@
     position: absolute;
     top: 0;
     left: 0;
-    z-index: 2;
+    z-index: 3;
     width: 100%;
     height: 90rpx;
     top: 50%;
