--- a/components/common/wf-picker-column/wf-picker-column.wxss
+++ b/components/common/wf-picker-column/wf-picker-column.wxss
@@ -15,9 +15,9 @@
     text-align: center;
 }
 
-::-webkit-scrollbar {
+/* ::-webkit-scrollbar {
     display: none;
     width: 0;
     height: 0;
     color: transparent;
-  }
+  } */
